<resources>
    <string name="app_name">ToyStory Shop</string>
    <string name="search_product_homefm">Tìm kiếm sản phẩm</string>
    <string name="new_arrivals_homefm">Sản phẩm mới</string>
    <string name="blind_box_homefm">Sản phẩm ngẫu nhiên</string>
    <string name="figuring_homefm">Mô hình</string>
    <string name="other_products_homefm">Sản phẩm khác</string>
    <string name="sale_homefm">Giảm giá</string>
    <string name="limited_figure_homefm">Phiên bản giới hạn</string>
    <string name="new_product_homefm">Sản phẩm mới</string>
    <string name="see_all_homefm">Xem tất cả</string>
    <string name="popular_product_homefm">Sản phẩm phổ biến</string>
    <string name="store_follow_homefm">Theo dõi cửa hàng</string>
    <string name="view_all_homefm">Xem tất cả</string>
    <string name="follow_homefm">Theo dõi</string>
    <string name="all_new_pro">Tất cả sản phẩm mới</string>
    <string name="all_sale_pro">Sản phẩm giảm giá</string>
    <string name="all_popular_pro">Tất cả sản phẩm phổ biến</string>
    <string name="sign_out_success_pro">Đăng xuất thành công</string>
    <string name="setting_pro">Cài đặt</string>
    <string name="language_currency_pro">Ngôn ngữ </string>
    <string name="evaluate_pro">Đánh giá Ứng dụng</string>
    <string name="refer_friends_pro">Giới thiệu bạn bè</string>
    <string name="terms_conditions_pro">Điều khoản &amp; Điều kiện</string>
    <string name="privacy_security_pro">Quyền riêng tư &amp; Bảo mật</string>
    <string name="sign_out_pro">Đăng xuất</string>
    <string name="select_language">Chọn ngôn ngữ: </string>
    <string name="select_currency">Chọn loại tiền: </string>
    <string name="star_rating_eva">Vui lòng chọn đánh giá sao </string>
    <string name="thank_review_eva">Cảm ơn bạn đã gửi đánh giá! </string>
    <string name="review_shop_eva">Đánh giá ToyStory Shop </string>
    <string name="feedback_eva">Nhập phản hồi của bạn tại đây</string>
    <string name="submit_review_eva">Gửi đánh giá</string>
    <string name="intro_title_int">Khám phá ngay ToyStory Shop với các mô hình đồ chơi độc đáo và nhận quà ưu đãi với mã giới thiệu:</string>
    <string name="share_with_friends_int">Chia sẻ với bạn bè qua</string>
    <string name="intro_rewards_int">Giới thiệu &amp; nhận ngay quà ưu đãi</string>
    <string name="share_referral_code_int">Chia sẻ mã giới thiệu của bạn</string>
    <string name="steps_to_get_rewards_int">Hướng dẫn bạn bè thực hiện qua các bước sau để nhận quà:</string>
    <string name="step_1_int">1. Mở ứng dụng ToyStory Shop và thực hiện mua sắm .</string>
    <string name="step_2_int">2. Nhập mã giới thiệu vào phần mã giảm giá.</string>
    <string name="step_3_int">3. Có một mã ưu đãi đặc biệt dành cho bạn của bạn.</string>
    <string name="share_button_int">Chia sẻ với bạn bè</string>
    <string name="privacy_security_title">Quyền Riêng Tư &amp; Bảo Mật</string>
    <string name="privacy_content">
    <![CDATA[
    ToyStory Shop cam kết bảo vệ quyền riêng tư và bảo mật thông tin cá nhân của bạn. Vui lòng đọc kỹ các điều khoản sau để hiểu cách chúng tôi sử dụng và bảo vệ thông tin của bạn.\n\n

    1. Thu thập và Sử dụng Dữ liệu Cá nhân:\n
    Chúng tôi thu thập các thông tin cá nhân như tên, địa chỉ, số điện thoại, email, và thông tin thanh toán của bạn nhằm cung cấp dịch vụ tốt nhất. Thông tin này chỉ được sử dụng cho mục đích hoàn thành đơn hàng, hỗ trợ khách hàng, và nâng cao trải nghiệm của bạn.\n\n

    2. Cookies và Công nghệ Theo dõi:\n
    ToyStory Shop sử dụng cookies và công nghệ theo dõi để cá nhân hóa trải nghiệm của bạn và theo dõi hành vi duyệt web nhằm cải thiện dịch vụ. Bạn có thể tùy chọn từ chối hoặc quản lý cookies theo nhu cầu.\n\n

    3. Quyền Truy cập, Chỉnh sửa và Xóa Dữ liệu:\n
    Bạn có quyền truy cập, chỉnh sửa hoặc yêu cầu xóa thông tin cá nhân của mình. Để thực hiện, vui lòng liên hệ với chúng tôi qua tài khoản của bạn hoặc qua bộ phận hỗ trợ.\n\n

    4. Chia sẻ Thông tin với Bên Thứ Ba:\n
    ToyStory Shop chỉ chia sẻ thông tin với các bên thứ ba khi cần thiết, chẳng hạn như bên giao hàng hoặc đối tác thanh toán, nhằm hoàn thành đơn hàng. Các bên này đều phải tuân thủ các tiêu chuẩn bảo mật cao để bảo vệ thông tin của bạn.\n\n

    5. Bảo mật Thông tin:\n
    Chúng tôi áp dụng các biện pháp kỹ thuật và tổ chức để bảo vệ dữ liệu cá nhân, bao gồm mã hóa và xác thực hai yếu tố. Tất cả giao dịch thanh toán đều được mã hóa để bảo vệ dữ liệu tài chính của bạn.\n\n

    6. Cập nhật Chính sách Quyền Riêng Tư:\n
    ToyStory Shop có quyền thay đổi chính sách quyền riêng tư và bảo mật khi cần thiết. Chúng tôi khuyến nghị bạn kiểm tra định kỳ để hiểu rõ quyền và trách nhiệm của mình.\n\n

    7. Liên hệ và Hỗ trợ:\n
    Nếu bạn có câu hỏi hoặc yêu cầu liên quan đến quyền riêng tư, vui lòng liên hệ với chúng tôi qua địa chỉ email hoặc số điện thoại hỗ trợ.
    ]]>
    </string>
    <string name="privacy_agree">Tôi đã đọc và đồng ý với các điều khoản về Quyền Riêng Tư &amp; Bảo Mật.</string>
    <string name="accepted_message_privacy">Bạn đã đồng ý với các điều khoản về Quyền Riêng Tư &amp; Bảo Mật.</string>
    <string name="confirm_exit_without_accepting_privacy">Bạn có chắc chắn muốn thoát mà không đồng ý với các điều khoản về Quyền Riêng Tư &amp; Bảo Mật không?</string>
    <string name="dark_mode_enabled_set">Chế độ tối đã được </string>
    <string name="dark_mode_on_set">bật</string>
    <string name="dark_mode_off_set">tắt</string>
    <string name="update_profile_set">Cập nhật thông tin cá nhân</string>
    <string name="change_password_set">Thay đổi mật khẩu</string>
    <string name="notification_set">Thông báo</string>
    <string name="dark_mode_set">Chế độ tối</string>
    <string name="contact_support_set">Liên hệ hỗ trợ</string>
    <string name="status_notifi">Thông báo đã bị</string>
    <string name="intro_title_detail">Mua ngay sản phẩm :</string>
    <string name="noti_block">Tắt thông báo</string>
    <string name="notification">Thông báo</string>
    <string name="ed">đã được</string>
    <string name="support">Hỗ trợ</string>
    <string name="support_chat">Hỗ trợ qua chat</string>
    <string name="support_phone">Hỗ trợ qua điện thoại</string>
    <string name="support_email">Hỗ trợ qua email</string>
    <string name="service">Dịch vụ</string>
    <string name="attachment">Tập tin đính kèm</string>
    <string name="title_contact">Tiêu đề</string>
    <string name="descr_contact">Mô tả</string>
    <string name="btn_attachm">Chọn tệp tin</string>
    <string name="edt_email">Nhập email của bạn</string>
    <string name="edt_title">Nhập tiêu đề</string>
    <string name="edt_des">Nhập mô tả</string>
    <string name="send_contact">Gửi</string>
    <string name="prompt_select_city">Chọn tỉnh/thành phố</string>
    <string name="prompt_select_district">Chọn quận/huyện</string>
    <string name="conditions_content_ter">
        <![CDATA[
        Chào mừng bạn đến với ứng dụng ToyStory Shop! Vui lòng đọc kỹ các Điều khoản và Điều kiện dưới đây trước khi sử dụng ứng dụng của chúng tôi.\n\n

        1. Điều Khoản Sử Dụng: Khi truy cập và sử dụng ứng dụng ToyStory Shop, bạn đồng ý tuân theo các Điều khoản này. Nếu bạn không đồng ý, vui lòng ngừng sử dụng ứng dụng.\n\n

        2. Đăng Ký Tài Khoản: Bạn phải đăng ký tài khoản để mua hàng và sử dụng các tính năng của ToyStory Shop. Bạn chịu trách nhiệm về bảo mật tài khoản và không chia sẻ thông tin tài khoản.\n\n

        3. Sản Phẩm và Giá Cả: Chúng tôi cung cấp các sản phẩm đồ chơi mô hình chính hãng. Giá sản phẩm có thể thay đổi mà không cần thông báo trước, nhưng giá khi đặt hàng sẽ là giá thanh toán cuối cùng.\n\n

        4. Thanh Toán: ToyStory Shop hỗ trợ các phương thức thanh toán trực tuyến. Bạn cần đảm bảo thanh toán đầy đủ trước khi chúng tôi tiến hành giao hàng.\n\n

        5. Chính Sách Giao Hàng: Chúng tôi giao hàng toàn quốc với thời gian từ 3-7 ngày làm việc. Phí giao hàng sẽ được hiển thị khi thanh toán.\n\n

        6. Chính Sách Đổi Trả: Sản phẩm có thể được đổi trả trong vòng 7 ngày nếu chưa qua sử dụng và còn nguyên bao bì. Nếu sản phẩm lỗi do nhà sản xuất, bạn sẽ được đổi miễn phí.\n\n

        7. Bảo Mật Thông Tin: Chúng tôi cam kết bảo vệ thông tin cá nhân của bạn và chỉ sử dụng chúng để cung cấp dịch vụ tốt nhất.\n\n

        8. Sửa Đổi Điều Khoản: ToyStory Shop có quyền thay đổi các Điều khoản này mà không cần thông báo trước. Các thay đổi sẽ có hiệu lực ngay khi được cập nhật.\n\n

        Bằng cách sử dụng ứng dụng ToyStory Shop, bạn đồng ý với các Điều khoản và Điều Kiện này.\n\n
        ]]>
    </string>
    <string name="accepted_message_ter">Cảm ơn bạn đã chấp nhận điều khoản!</string>
    <string name="confirm_exit_without_accepting_ter">Bạn có chắc chắn muốn thoát mà không chấp nhận Điều khoản và Điều kiện không?</string>
    <string name="exit_button_ter">Thoát</string>
    <string name="stay_button_ter">Ở lại</string>
    <string name="terms_and_conditions_title_ter">Điều khoản và Điều kiện</string>
    <string name="agree_statement_ter">Tôi đồng ý với các điều khoản và điều kiện</string>
    <string name="accept_button_ter">Chấp nhận</string>
    <string name="Toast_email">Vui lòng nhập địa chỉ email hợp lệ!</string>
    <string name="Toast_failure">Đăng nhập thất bại!</string>
    <string name="Toast_send">Chúng tôi đã gửi mail đến hộp thư của bạn để đổi mật khẩu!</string>
    <string name="Toast_send_error">Không thể gửi mail. Hãy kiểm tra lại địa chỉ email.</string>
    <string name="Toast_wrong">Thông tin hiện không đúng, Hãy kiểm tra lại !</string>
    <string name="send_otp_error">"Gửi OTP thất bại</string>
    <string name="forgot_text">Xác minh thông tin của bạn</string>
    <string name="forgot_text1">Vui lòng nhập thông tin để đổi mật khẩu</string>
    <string name="send_button">Gửi yêu cầu</string>
    <string name="forgot_otp_pass">Vui lòng nhập mật khẩu mới</string>
    <string name="forgot_otp_success">Cập nhập mật khẩu thành công!</string>
    <string name="forgot_otp_error">Cập nhập mật khẩu thất bại!</string>
    <string name="forgot_otp_title">Cập nhập mật khẩu !</string>
    <string name="send_sdt">Xác minh số điện thoại của bạn</string>
    <string name="send_text_phone">Chúng tôi đã gửi cho bạn một tin nhắn SMS kèm theo mã để nhập số</string>
    <string name="no_otp">"Bạn không nhận được mã nào à? Gửi lại mã mới</string>
    <string name="otp_verify">"Vui lòng nhập mã OTP hợp lệ.</string>
    <string name="otp_fail">"Xác minh thất bại!</string>
    <string name="welcome_text">Chào mừng đến ToyStory Shop !</string>
    <string name="signin_account">Đăng nhập vào tài khoản của bạn</string>
    <string name="email_hint">Email/Số điện thoại</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="signin_button">Đăng nhập</string>
    <string name="google_login_button">Đăng nhập với Google</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="signup_prompt">Bạn chưa có tài khoản?</string>
    <string name="signup_now">Đăng ký ngay</string>
    <string name="signup_account">Đăng ký tài khoản của bạn</string>
    <string name="name_hint">Họ và tên</string>
    <string name="re_password_hint">Nhập Lại Mật khẩu</string>
    <string name="signup_button">Đăng Ký</string>
    <string name="signin_prompt">Bạn đã có tài khoản?</string>
    <string name="signin_now">Đăng nhập ngay</string>
    <string name="home_menu">Trang Chủ</string>
    <string name="browse_menu">Tìm Kiếm</string>
    <string name="history_menu">Lịch Sử Mua</string>
    <string name="profile_menu">Hồ Sơ</string>
    <string name="save">Lưu</string>
    <string name="enter_email">Nhập email</string>
    <string name="enter_name">Nhập tên</string>
    <string name="enter_phone_number">Nhập số điện thoại</string>
    <string name="customer_name">Tên khách hàng</string>
    <string name="customer_phone">Số điện thoại khách hàng</string>
</resources>