<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_menu" />
    <item
        android:id="@+id/nav_browse"
        android:icon="@drawable/ic_search"
        android:title="@string/browse_menu" />
    <item
        android:id="@+id/nav_store"
        android:icon="@drawable/ic_store"
        android:title="@string/store_menu" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_order_history"
        android:title="@string/history_menu" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_menu" />
</menu>
