<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <!-- Upper Blue Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#001A61"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Avatar -->
        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@drawable/circular_background"
            android:src="@drawable/ic_logo" />

        <!-- User Name -->
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/customer_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- thông tin -->
        <TextView
            android:id="@+id/tv_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/customer_phone"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- White Section with Menu -->
    <LinearLayout
        style="@style/SCREEN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_settings"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/setting_pro"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_rate"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/evaluate_pro"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_introducefriend"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/refer_friends_pro"
            android:textSize="16sp" />

        <!-- Hỗ trợ & Liên hệ -->
        <TextView
            android:id="@+id/tv_contact_support"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/contact_support_set"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_terms"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/terms_conditions_pro"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_privacy_security"
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/privacy_security_pro"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/sign_out_pro"
            android:textColor="#FF0000"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
